# git_repo_for_trail

./: .gitignore  CMakeLists.txt  COPYRIGHT  README
lib/: CMakeLists.txt
lib/franch/: feature.c  feature.h  vlsift.c  vlsift.h
src/: CMakeLists.txt  CacheFunction.cc  CacheFunction.h  cache_test.cc  main.cc
src/base/: CMakeLists.txt  foo.cu  foo.h  gpu_mat.h
src/math/: CMakeLists.txt
src/mvs/: CMakeLists.txt  depth_map.cc  depth_map.h  gpu_mat.h  image.cc  image.h  mat.h  model.cc  model.h  normal_map.cc  normal_map.h  patch_match.cc  patch_match.h  patch_match_cuda.cu  patch_match_cuda.h
src/reserve/: CMakeLists.txt
src/util/: CMakeLists.txt  cache.h  threading.cc  threading.h  threading_test.cc  types.h  util_sys.cc  util_sys.h
